--- a/public/less/login_and_register.less
+++ b/public/less/login_and_register.less
@@ -2,6 +2,22 @@
     Page: register and login
 */
 
+.login {
+    background: url(../img/blur-background09.jpg) repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.register {
+    background: url(../img/blur-background09.jpg) repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 .form-box {    
     width: 360px;
     margin: 90px auto 0 auto;
