--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -281,6 +281,9 @@
                 </div>
             </nav>
         </header>
+
+        <p id="notice"><%= flash[:notice] %></p>
+
         <div class="wrapper row-offcanvas row-offcanvas-left">
             <!-- Left side column. contains the logo and sidebar -->
             <aside class="left-side sidebar-offcanvas">
@@ -525,18 +528,6 @@
                                 </div>
                             </div>
                             <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">CC:</span>
-                                    <input name="email_to" type="email" class="form-control" placeholder="Email CC">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <span class="input-group-addon">BCC:</span>
-                                    <input name="email_to" type="email" class="form-control" placeholder="Email BCC">
-                                </div>
-                            </div>
-                            <div class="form-group">
                                 <textarea name="message" id="email_message" class="form-control" placeholder="Message" style="height: 120px;"></textarea>
                             </div>
                             <div class="form-group">                                
@@ -550,9 +541,9 @@
                         </div>
                         <div class="modal-footer clearfix">
 
-                            <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Discard</button>
+                            <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="fa fa-times"></i> Cancel</button>
 
-                            <button type="submit" class="btn btn-primary pull-left"><i class="fa fa-envelope"></i> Send Message</button>
+                            <button type="submit" class="btn btn-primary pull-left"><i class="fa fa-envelope"></i> Send Applicatons</button>
                         </div>
                     </form>
                 </div><!-- /.modal-content -->
