--- a/app/views/home/index2.html.erb
+++ b/app/views/home/index2.html.erb
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.min.css">
 
     <!-- App styles -->
-    <link rel="stylesheet" href="/assets/stylesheets/gyde.css">
+    <link rel="stylesheet" href="/stylesheets/gyde.css">
 
     <!-- Javascript libraries -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
