--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,31 +1,15 @@
 <!DOCTYPE html>
 <html ng-app="gydeApp">
   <head>
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-54087593-3', 'auto');
-      ga('send', 'pageview');
-    </script>
+    <%= render partial: 'shim' %>
   </head>
 
   <body class="skin-blue">
 
-    <div ng-controller="MainController">
-        
+    <div>
         <%= render 'layouts/navigation' %>
-         <%#<a href="/priorities">Priorities</a>%>
-      
+        <%#<a href="/priorities">Priorities</a>%>
+
         <div class="wrapper row-offcanvas row-offcanvas-left">
             <!-- Left side column. contains the logo and sidebar -->
             <aside class="left-side sidebar-offcanvas">
@@ -224,7 +208,7 @@
                     <!-- top row -->
                     <div class="row">
                         <div class="col-xs-12 connectedSortable">
-                            
+
                         </div><!-- /.col -->
                     </div>
                     <!-- /.row -->
@@ -232,7 +216,7 @@
                     <!-- Main row -->
                     <div class="row">
                         <!-- Left col -->
-                        <section class="col-lg-6 connectedSortable"> 
+                        <section class="col-lg-6 connectedSortable">
                             <!-- Box (with bar chart) -->
                             <div class="box box-danger" id="loading-example">
                                 <div class="box-header">
@@ -250,12 +234,11 @@
                                     <div class="row">
                                         <div class="col-sm-7">
                                             <!-- bar chart -->
-                                
-                                    <!-- Morris chart - Sales -->
-                                    <div class="chart tab-pane active" id="revenue-chart" style="position: relative; height: 300px;"></div>
-                                 
-                            
+
+                                            <!-- Morris chart - Sales -->
+                                            <div class="chart tab-pane active" id="revenue-chart" style="position: relative; height: 300px;"></div>
                                         </div>
+
                                         <div class="col-sm-5">
                                             <div class="pad">
                                                 <!-- Progress bars -->
@@ -314,10 +297,7 @@
                                         </div><!-- ./col -->
                                     </div><!-- /.row -->
                                 </div><!-- /.box-footer -->
-                            </div><!-- /.box -->        
-                            
-                              
-                            
+                            </div><!-- /.box -->
 
                             <!-- quick email widget -->
                             <div class="box box-info">
@@ -344,7 +324,7 @@
                                 <div class="box-header">
                                     <i class="fa fa-calendar"></i>
                                     <div class="box-title">Calendar</div>
-                                    
+
                                     <!-- tools box -->
                                     <div class="pull-right box-tools">
                                         <!-- button with a dropdown -->
@@ -357,7 +337,7 @@
                                                 <li><a href="#">View calendar</a></li>
                                             </ul>
                                         </div>
-                                    </div><!-- /. tools -->                                    
+                                    </div><!-- /. tools -->
                                 </div><!-- /.box-header -->
                                 <div class="box-body no-padding">
                                     <!--The calendar -->
@@ -386,9 +366,9 @@
                                             <span class="handle">
                                                 <i class="fa fa-ellipsis-v"></i>
                                                 <i class="fa fa-ellipsis-v"></i>
-                                            </span>  
+                                            </span>
                                             <!-- checkbox -->
-                                            <input type="checkbox" value="" name=""/>                                            
+                                            <input type="checkbox" value="" name=""/>
                                             <!-- todo text -->
                                             <span class="text">Complete VSP Contract</span>
                                             <!-- Emphasis label -->
@@ -403,7 +383,7 @@
                                             <span class="handle">
                                                 <i class="fa fa-ellipsis-v"></i>
                                                 <i class="fa fa-ellipsis-v"></i>
-                                            </span>                                            
+                                            </span>
                                             <input type="checkbox" value="" name=""/>
                                             <span class="text">Update Aetna Prices</span>
                                             <small class="label label-info"><i class="fa fa-clock-o"></i> 4 hours</small>
@@ -521,16 +501,12 @@
                                     </div>
                                 </div>
                             </div><!-- /.box (chat box) -->
-
-                            
-
                         </section><!-- right col -->
                     </div><!-- /.row (main row) -->
-
                 </section><!-- /.content -->
             </aside><!-- /.right-side -->
         </div><!-- ./wrapper -->
-    
+
       <header class="navbar navbar-static-top" id="top" role="banner">
         <div class="container">
           <div class="navbar-header">
@@ -567,9 +543,10 @@
           </nav>
         </div>
       </header>
+    </div>
 
-
-     <div ng-view></div>
+    <div ng-controller="MainController">
+      <div ng-view></div>
 
       <footer>
         <div class="container">
