added some membership stuff

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -545,6 +545,10 @@
       </header>
     </div>
 
+    <div ng-controller="MembershipsController">
+      <div ng-include="'/javascripts/partials/memberships.html'"></div>
+    </div>
+
     <div ng-controller="MainController">
       <div ng-view></div>
 
