--- a/app/views/registrations/index.html.erb
+++ b/app/views/registrations/index.html.erb
@@ -10,12 +10,10 @@
         <link href="../css/font-awesome.min.css" rel="stylesheet" type="text/css" />
         <!-- Ionicons -->
         <link href="../css/ionicons.min.css" rel="stylesheet" type="text/css" />
-        <!-- bootstrap wysihtml5 - text editor -->
-        <link href="../css/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css" rel="stylesheet" type="text/css" />
-        <!-- iCheck for checkboxes and radio inputs -->
-        <link href="../css/iCheck/minimal/blue.css" rel="stylesheet" type="text/css" />
         <!-- Theme style -->
         <link href="../css/AdminLTE.css" rel="stylesheet" type="text/css" />
+
+        <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -1111,32 +1109,11 @@
         <script src="../js/AdminLTE/app.js" type="text/javascript"></script>
         <!-- GroupHub for demo purposes -->
         <script src="js/AdminLTE/demo.js" type="text/javascript"></script>        
-        <!-- Bootstrap WYSIHTML5 -->
-        <script src="../jsplugins//bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js" type="text/javascript"></script>
-        <!-- iCheck -->
-        <script src="../jsplugins//iCheck/icheck.min.js" type="text/javascript"></script>
         <!-- Page script -->
         <script type="text/javascript">
             $(function() {
-
                 "use strict";
 
-                //iCheck for checkbox and radio inputs
-                $('input[type="checkbox"]').iCheck({
-                    checkboxClass: 'icheckbox_minimal-blue',
-                    radioClass: 'iradio_minimal-blue'
-                });
-
-                //When unchecking the checkbox
-                $("#check-all").on('ifUnchecked', function(event) {
-                    //Uncheck all checkboxes
-                    $("input[type='checkbox']", ".table-mailbox").iCheck("uncheck");
-                });
-                //When checking the checkbox
-                $("#check-all").on('ifChecked', function(event) {
-                    //Check all checkboxes
-                    $("input[type='checkbox']", ".table-mailbox").iCheck("check");
-                });
                 //Handle starring for glyphicon and font awesome
                 $(".fa-star, .fa-star-o, .glyphicon-star, .glyphicon-star-empty").click(function(e) {
                     e.preventDefault();
@@ -1155,9 +1132,6 @@
                         $(this).toggleClass("fa-star-o");
                     }
                 });
-
-                //Initialize WYSIHTML5 - text editor
-                $("#email_message").wysihtml5();
             });
         </script>
 
